# advent

2024/rust/: Cargo.toml  day-01.bench.txt  day-02.bench.txt  day-03.bench.txt  day-04.bench.txt  day-05.bench.txt  day-06.bench.txt  justfile
2024/rust/aoc-tools/: Cargo.toml
2024/rust/aoc-tools/benches/: benchmarks.rs
2024/rust/daily-template/: Cargo.toml
2024/rust/daily-template/src/: part1.rs  part2.rs
2024/rust/day-01/: Cargo.toml
2024/rust/day-01/src/: part1.rs  part2.rs
2024/rust/day-02/: Cargo.toml
2024/rust/day-02/src/: part1.rs  part2.rs
2024/rust/day-03/: Cargo.toml
2024/rust/day-03/src/: part1.rs  part2.rs
2024/rust/day-04/: Cargo.toml
2024/rust/day-04/src/: part1.rs  part2.rs
2024/rust/day-05/: Cargo.toml
2024/rust/day-05/src/: part1.rs  part2.rs
2024/rust/day-06/: Cargo.toml
2024/rust/day-06/src/: part1.rs  part2.rs
