[workspace]
resolver = "2"
members = [
  "aoc-tools",
  "day-01",
  "day-02",
  "day-03",
  "day-04",
  "day-05",
  "day-06",
]

[workspace.dependencies]
anyhow = "1.0.93"
divan = "0.1.16"
itertools = "0.13.0"
nom = "7.1.3"
proptest = "1.5.0"
rayon = "1.10.0"
rstest = "0.23.0"
rstest_reuse = "0.7.0"
test-log = "0.2.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bytemuck = "1.20.0"
glam = "0.29.2"
ndarray = "0.16.1"
num-traits = "0.2.19"
fxhash = "0.2.1"
bitvec = "1.0.1"
rangemap = "1.5.1"
bitmask = "0.5.0"
